chore: update .env.template to clarify subdomain usage and add scripts section in package.json

--- a/apps/localtunnel/.env.template
+++ b/apps/localtunnel/.env.template
@@ -1,4 +1,4 @@
 # Port for local backend server
 PORT="9000"
-# Subdomain
+# Subdomain, it ends up as <SUBDOMAIN>.loca.lt
 SUBDOMAIN="kyung-paypal-order-v2-dev"
