--- a/apps/localtunnel/package.json
+++ b/apps/localtunnel/package.json
@@ -3,6 +3,10 @@
   "module": "index.ts",
   "type": "module",
   "private": true,
+  "scripts": {
+    "dev": "bun run index.ts",
+    "medusa:next": "bun run index.ts"
+  },
   "devDependencies": {
     "@types/bun": "latest"
   },
