--- a/apps/localtunnel/package.json
+++ b/apps/localtunnel/package.json
@@ -4,8 +4,7 @@
   "type": "module",
   "private": true,
   "scripts": {
-    "dev": "bun run index.ts",
-    "medusa:next": "bun run index.ts"
+    "dev": "bun run index.ts"
   },
   "devDependencies": {
     "@types/bun": "latest"
