--- a/apps/medusa-app/.env.template
+++ b/apps/medusa-app/.env.template
@@ -25,3 +25,4 @@ PAYPAL_CLIENT_ID="Your PayPal Client ID"
 PAYPAL_CLIENT_SECRET="Your PayPal Client Secret"
 PAYPAL_RETURN_URL="http://localhost:9000/store-api/payment/paypal-order-api-v2/return"
 PAYPAL_CANCEL_URL="http://localhost:9000/store-api/payment/paypal-order-api-v2/cancel"
+PAYPAL_WEBHOOK_ID="Your PayPal Webhook ID"
