--- a/apps/medusa-app/package.json
+++ b/apps/medusa-app/package.json
@@ -33,6 +33,7 @@
     "@medusajs/medusa": "2.12.1",
     "@medusajs/types": "^2.12.1",
     "@medusajs/ui": "^4.0.29",
+    "@paypal/paypal-js": "^9.2.0",
     "@react-email/components": "^1.0.1",
     "@types/jsonwebtoken": "^9.0.10",
     "axios": "^1.13.2",
@@ -60,7 +61,6 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "ts-node": "^10.9.2",
-    "typescript": "^5.9.3",
     "vite": "^7.2.7",
     "yalc": "^1.0.0-pre.53"
   },
