--- a/apps/nestjs-app/package.json
+++ b/apps/nestjs-app/package.json
@@ -71,8 +71,7 @@
     "ts-jest": "29.4.6",
     "ts-loader": "^9.5.4",
     "ts-node": "^10.9.2",
-    "tsconfig-paths": "4.2.0",
-    "typescript": "^5.9.3"
+    "tsconfig-paths": "4.2.0"
   },
   "jest": {
     "moduleFileExtensions": [
