--- a/apps/next-app/package.json
+++ b/apps/next-app/package.json
@@ -94,7 +94,6 @@
     "eslint": "^9.26.0",
     "eslint-config-next": "15.3.2",
     "postcss": "^8.5.3",
-    "tailwindcss": "^4.1.6",
-    "typescript": "^5.9.3"
+    "tailwindcss": "^4.1.6"
   }
 }
