--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   ],
   "devDependencies": {
     "@biomejs/biome": "2.3.8",
-    "turbo": "^2.6.3"
+    "turbo": "^2.6.3",
+    "typescript": "^5.9.3"
   },
   "dependencies": {
     "motion": "^12.25.0"
