--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -25,7 +25,6 @@
   "devDependencies": {
     "@repo/typescript-config": "workspace:*",
     "@types/node": "^24.10.1",
-    "prisma": "^7.1.0",
-    "typescript": "latest"
+    "prisma": "^7.1.0"
   }
 }
