--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -22,8 +22,7 @@
     "@rollup/plugin-commonjs": "^29.0.0",
     "@rollup/plugin-node-resolve": "^16.0.3",
     "@rollup/plugin-typescript": "^12.3.0",
-    "@types/node": "^25.0.2",
-    "typescript": "^5.9.3"
+    "@types/node": "^25.0.2"
   },
   "dependencies": {
     "tslib": "^2.8.1",
