--- a/apps/medusa-app/biome.json
+++ b/apps/medusa-app/biome.json
@@ -25,7 +25,8 @@
     "rules": {
       "recommended": true,
       "correctness": {
-        "noUnusedVariables": "off"
+        "noUnusedVariables": "off",
+        "noUnusedFunctionParameters": "off"
       }
     }
   },
