chore: update .env.template to organize environment variables and remove redundant entries

--- a/apps/medusa-app/.env.template
+++ b/apps/medusa-app/.env.template
@@ -6,19 +6,19 @@ ADMIN_CORS=http://localhost:5173,http://localhost:9000,https://docs.medusajs.com
 AUTH_CORS=http://localhost:5173,http://localhost:9000,https://docs.medusajs.com
 REDIS_URL=redis://localhost:6379
 JWT_SECRET=supersecret
+JWT_EXPIRES_IN=1d
 COOKIE_SECRET=supersecret
 DATABASE_URL=
-DB_NAME=medusa-v2
 # must use port 9000, a bug in medusa forces admin dashboard to use this port when loading product thumbnails
 PORT=9000
 LOG_FILE=.log/all.log
+
+MEDUSA_BACKEND_URL=http://localhost:9000
 
 # Resend
 RESEND_API_KEY="re_******W9_GZN3UyUzcYo5tE4d2cEi2nEr"
 RESEND_SENDER_NAME="MEDUSA"
 RESEND_SENDER_EMAIL="send@medusa.com"
-
-MEDUSA_BACKEND_URL=http://localhost:9000
 
 # PayPal Payment Module
 PAYPAL_CLIENT_ID="Your PayPal Client ID"
@@ -26,3 +26,8 @@ PAYPAL_CLIENT_SECRET="Your PayPal Client Secret"
 PAYPAL_RETURN_URL="http://localhost:4000/medusa/store-api/payment/return"
 PAYPAL_CANCEL_URL="http://localhost:4000/medusa/store-api/payment/cancel"
 PAYPAL_WEBHOOK_ID="Your PayPal Webhook ID"
+
+# Meilisearch
+MEILISEARCH_HOST=your-meilisearch-host
+MEILISEARCH_API_KEY=your-meilisearch-api-key
+MEILISEARCH_PRODUCT_INDEX_NAME=your-product-index-name
