fix: disable unused variables and function parameters checks in linter rules

--- a/apps/bun-server/biome.json
+++ b/apps/bun-server/biome.json
@@ -25,6 +25,10 @@
       },
       "a11y": {
         "noSvgWithoutTitle": "off"
+      },
+      "correctness": {
+        "noUnusedVariables": "off",
+        "noUnusedFunctionParameters": "off"
       }
     }
   },
