chore(medusa-app): update .env.template

--- a/apps/medusa-app/.env.template
+++ b/apps/medusa-app/.env.template
@@ -23,8 +23,8 @@ RESEND_SENDER_EMAIL="send@medusa.com"
 # PayPal Payment Module
 PAYPAL_CLIENT_ID="Your PayPal Client ID"
 PAYPAL_CLIENT_SECRET="Your PayPal Client Secret"
-PAYPAL_RETURN_URL="http://localhost:4000/medusa/store-api/payment/return"
-PAYPAL_CANCEL_URL="http://localhost:4000/medusa/store-api/payment/cancel"
+PAYPAL_RETURN_URL="https://next.sandbox.localhost/medusa/store-api/payment/return"
+PAYPAL_CANCEL_URL="https://next.sandbox.localhost/medusa/store-api/payment/cancel"
 PAYPAL_WEBHOOK_ID="Your PayPal Webhook ID"
 
 # Meilisearch
