chore(nestjs-app): add parser configuration for unsafeParameterDecorators

--- a/apps/nestjs-app/biome.json
+++ b/apps/nestjs-app/biome.json
@@ -31,6 +31,9 @@
   "javascript": {
     "formatter": {
       "quoteStyle": "double"
+    },
+    "parser": {
+      "unsafeParameterDecoratorsEnabled": true
     }
   },
   "assist": {
