chore(medusa-app): update CORS settings and cookie domain for improved security

--- a/apps/medusa-app/.env.template
+++ b/apps/medusa-app/.env.template
@@ -1,9 +1,9 @@
 NODE_ENV="development"
 
 MEDUSA_ADMIN_ONBOARDING_TYPE=default
-STORE_CORS=http://localhost:8000,https://docs.medusajs.com
-ADMIN_CORS=http://localhost:5173,http://localhost:9000,https://docs.medusajs.com
-AUTH_CORS=http://localhost:5173,http://localhost:9000,https://docs.medusajs.com
+STORE_CORS=https://next.sandbox.local
+ADMIN_CORS=https://medusa.sandbox.local
+AUTH_CORS=https://medusa.sandbox.local,https://next.sandbox.local
 REDIS_URL=redis://localhost:6379
 JWT_SECRET=supersecret
 JWT_EXPIRES_IN=1d
@@ -13,7 +13,7 @@ DATABASE_URL=
 PORT=9000
 LOG_FILE=.log/all.log
 
-MEDUSA_BACKEND_URL=http://localhost:9000
+MEDUSA_BACKEND_URL=https://medusa.sandbox.local
 
 # Resend
 RESEND_API_KEY="re_******W9_GZN3UyUzcYo5tE4d2cEi2nEr"
@@ -23,8 +23,8 @@ RESEND_SENDER_EMAIL="send@medusa.com"
 # PayPal Payment Module
 PAYPAL_CLIENT_ID="Your PayPal Client ID"
 PAYPAL_CLIENT_SECRET="Your PayPal Client Secret"
-PAYPAL_RETURN_URL="https://next.sandbox.localhost/medusa/store-api/payment/return"
-PAYPAL_CANCEL_URL="https://next.sandbox.localhost/medusa/store-api/payment/cancel"
+PAYPAL_RETURN_URL="https://next.sandbox.local/medusa/store-api/payment/return"
+PAYPAL_CANCEL_URL="https://next.sandbox.local/medusa/store-api/payment/cancel"
 PAYPAL_WEBHOOK_ID="Your PayPal Webhook ID"
 
 # Meilisearch
