--- a/apps/medusa-app/.env.template
+++ b/apps/medusa-app/.env.template
@@ -8,7 +8,7 @@ REDIS_URL=redis://localhost:6379
 JWT_SECRET=supersecret
 JWT_EXPIRES_IN=1d
 COOKIE_SECRET=supersecret
-DATABASE_URL=
+DATABASE_URL=postgres://username:******@localhost/database-name
 # must use port 9000, a bug in medusa forces admin dashboard to use this port when loading product thumbnails
 PORT=9000
 LOG_FILE=.log/all.log
