--- a/apps/nest-app/biome.json
+++ b/apps/nest-app/biome.json
@@ -28,6 +28,10 @@
       },
       "style": {
         "useImportType": "off"
+      },
+      "correctness": {
+        "noUnusedImports": "off",
+        "noUnusedVariables": "off"
       }
     }
   },
