fix: update environment variables to use NEXT_PUBLIC_NESTJS and improve socket handling

--- a/apps/next-app/.env.local.example
+++ b/apps/next-app/.env.local.example
@@ -1,8 +1,5 @@
 # NestJS
-NEXT_PUBLIC_NESTJS="http://localhost:3001"
-
-# PayPal
-NEXT_PUBLIC_SERVER_HOST="http://localhost:3001"
+NEXT_PUBLIC_NESTJS="https://nest.sandbox.local"
 
 # Tencent COS
 NEXT_PUBLIC_BUCKET="cos-1252579271"
@@ -11,9 +8,6 @@ NEXT_PUBLIC_REGION="ap-guangzhou"
 # Orama
 NEXT_PUBLIC_ORAMA_ENDPOINT="https://cloud.orama.run/v1/indexes/json-sandbox-isg1cr"
 NEXT_PUBLIC_ORAMA_API_KEY="fngg33rBAHegG6u7VDDHxttkJrFCn52x"
-
-# Websocket
-NEXT_PUBLIC_WEBSOCKET_URL="http://localhost:3001"
 
 # Google reCAPTCHA v3
 NEXT_PUBLIC_RECAPTCHA_SITE_KEY="6Lfiq48***************************PzAFhr"
