feat: add CORS configuration to use environment variable for origins

--- a/apps/nest-app/.env.example
+++ b/apps/nest-app/.env.example
@@ -3,6 +3,9 @@ SECRET="secret"
 
 DATABASE_URL="postgresql://postgres:G835fga%236@localhost:5432/nestjs-sandbox?schema=public"
 
+# CORS
+CORS_ORIGINS="https://next.sandbox.local,http://localhost:3000"
+
 # Tencent COS
 SECRET_ID="AKID***************************LxQvY"
 SECRET_KEY="gBap************************NZjo"
