fix(next-app): update scripts to use Bun and add NODE_USE_SYSTEM_CA to fix NodeJS self-signed CA issue

--- a/apps/next-app/.env.local.example
+++ b/apps/next-app/.env.local.example
@@ -1,3 +1,6 @@
+# System CA certificates, for development environment with Bun
+NODE_USE_SYSTEM_CA="1"
+
 # NestJS
 NEXT_PUBLIC_NESTJS="https://nest.sandbox.local"
 
