--- a/apps/next-app/package.json
+++ b/apps/next-app/package.json
@@ -46,6 +46,8 @@
     "animejs": "^3.2.2",
     "antd": "^5.25.1",
     "axios": "^1.13.4",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "cos-js-sdk-v5": "^1.8.7",
     "dayjs": "^1.11.19",
     "exceljs": "^4.4.0",
@@ -54,6 +56,7 @@
     "jwt-decode": "^4.0.0",
     "leva": "^0.10.0",
     "lottie-react": "^2.4.1",
+    "lucide-react": "^0.563.0",
     "mathjs": "^14.4.0",
     "motion": "^12.11.0",
     "nanoid": "^5.1.5",
@@ -64,6 +67,7 @@
     "proxy-agent": "^6.5.0",
     "query-string": "^9.3.1",
     "radash": "^12.1.1",
+    "radix-ui": "^1.4.3",
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
     "react-hook-form": "^7.71.1",
@@ -77,6 +81,7 @@
     "sharp": "^0.34.5",
     "socket.io-client": "^4.8.3",
     "styled-components": "^6.1.18",
+    "tailwind-merge": "^3.4.0",
     "unified": "^11.0.5",
     "zod": "^4.3.6",
     "zustand": "^5.0.11"
@@ -95,6 +100,7 @@
     "eslint": "^9.26.0",
     "eslint-config-next": "16.1.6",
     "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.18"
+    "tailwindcss": "^4.1.18",
+    "tw-animate-css": "^1.4.0"
   }
 }
