--- a/apps/medusa-app/biome.json
+++ b/apps/medusa-app/biome.json
@@ -31,6 +31,9 @@
     }
   },
   "javascript": {
+    "parser": {
+      "unsafeParameterDecoratorsEnabled": true
+    },
     "formatter": {
       "quoteStyle": "double"
     }
