--- a/apps/next-app/biome.json
+++ b/apps/next-app/biome.json
@@ -8,7 +8,7 @@
   },
   "files": {
     "includes": [
-      "**/*.{ts,tsx,js,jsx,json}",
+      "**/*.{ts,tsx,js,jsx,json,css}",
       "!.next",
       "!.turbo",
       "!node_modules"
@@ -55,6 +55,11 @@
   "javascript": {
     "formatter": {
       "quoteStyle": "double"
+    }
+  },
+  "css": {
+    "parser": {
+      "tailwindDirectives": true
     }
   },
   "assist": {
