--- a/apps/medusa-app/package.json
+++ b/apps/medusa-app/package.json
@@ -20,7 +20,8 @@
     "test:integration:http": "TEST_TYPE=integration:http NODE_OPTIONS=--experimental-vm-modules jest --silent=false --runInBand --forceExit",
     "test:integration:modules": "TEST_TYPE=integration:modules NODE_OPTIONS=--experimental-vm-modules jest --silent=false --runInBand --forceExit",
     "test:unit": "TEST_TYPE=unit NODE_OPTIONS=--experimental-vm-modules jest --silent --runInBand --forceExit",
-    "medusa:next": "medusa develop"
+    "medusa:next": "medusa develop",
+    "tsoa:spec": "tsoa spec"
   },
   "dependencies": {
     "@medusajs/admin-sdk": "2.12.1",
@@ -35,11 +36,15 @@
     "@medusajs/ui": "^4.0.29",
     "@react-email/components": "^1.0.1",
     "@types/jsonwebtoken": "^9.0.10",
+    "@types/swagger-ui-express": "^4.1.8",
     "axios": "^1.13.2",
     "cors": "^2.8.5",
     "jsonwebtoken": "^9.0.3",
+    "mime-types": "^3.0.2",
     "ms": "^2.1.3",
     "resend": "^6.5.2",
+    "swagger-ui-express": "^5.0.1",
+    "tsoa": "^7.0.0-alpha.0",
     "zod": "^4.1.13"
   },
   "devDependencies": {
