--- a/apps/medusa-app/yaak/yaak.rq_cuaCVHrKCg.yaml
+++ b/apps/medusa-app/yaak/yaak.rq_cuaCVHrKCg.yaml
@@ -2,7 +2,7 @@ type: http_request
 model: http_request
 id: rq_cuaCVHrKCg
 createdAt: 2025-12-14T17:11:01.310387700
-updatedAt: 2026-02-12T03:04:44.932248
+updatedAt: 2026-02-12T03:13:30.825536700
 workspaceId: wk_kN2o7ho7z7
 folderId: fl_3j269iZHuJ
 authentication: {}
@@ -11,7 +11,7 @@ body:
   text: |-
     {
       "email": ${[ customer ]},
-      "password": "supersecret"
+      "password": ${[ customerPsw ]}
     }
 bodyType: application/json
 description: '[object Object]'
